# legal-segmenter

./: README.md  demo.py  pyproject.toml
legal-segmenter/: pyproject.toml
legal-segmenter/legal_segmenter/constants/: case_names.txt  court_documents.txt  court_names.txt  geographical_terms.txt  judges_and_officials.txt  legislative_docs.txt  months.txt  periodicals.txt  publishing_terms.txt  services.txt  subdivisions.txt
legal_segmenter/: segmenter.py
legal_segmenter/constants/: months.txt  periodicals.txt  publishing_terms.txt
tests/: test_legal_segmenter.py
