[tool.poetry]
name = "legal-segmenter"
version = "0.1.2"
description = "A simple library for segmenting legal texts."
authors = ["Neel Guha <nguha@cs.stanford.com>"]
readme = "README.md"
homepage = "https://github.com/neelguha/legal-segmenter"
repository = "https://github.com/neelguha/legal-segmenter"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
